# mechanism

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/include/json/: json.hpp
lib/include/stb/: README.md  stb_voxel_render.h
mch/: cfg.json
mechanism/: environment.cpp  environment.h  mechanism.cpp  mechanism.h
mechanism/engine/: window.cpp  window.h
